[gd_scene load_steps=34 format=3 uid="uid://c8i3422yldarm"]

[ext_resource type="Script" uid="uid://cycpam4c4eru5" path="res://world.gd" id="1_tlwt5"]
[ext_resource type="Script" uid="uid://bicyvhsgocq7m" path="res://entity.gd" id="2_k3n1d"]
[ext_resource type="Curve" uid="uid://biub7w8c1x0m5" path="res://arms_curve.tres" id="3_2o6r5"]
[ext_resource type="PackedScene" uid="uid://cq5o3rfvc5bu7" path="res://level0.tscn" id="3_hiqwa"]
[ext_resource type="Script" uid="uid://c0rytcnogkyj1" path="res://level.gd" id="4_hiqwa"]
[ext_resource type="Texture2D" uid="uid://clruk8tdf246" path="res://head.png" id="4_ioo17"]
[ext_resource type="Script" uid="uid://cj18dxn01r02p" path="res://fantasy_ui.gd" id="5_036b0"]
[ext_resource type="Texture2D" uid="uid://ds5xxw5q5b4e8" path="res://hand.png" id="5_wse8f"]
[ext_resource type="Texture2D" uid="uid://cxe0vnxfeqq20" path="res://torso.png" id="6_ic0uy"]
[ext_resource type="Texture2D" uid="uid://daqrilk07st2u" path="res://acearmless.png" id="6_udxuc"]
[ext_resource type="Texture2D" uid="uid://k2havrlx7exv" path="res://foot.png" id="7_k3n1d"]
[ext_resource type="Texture2D" uid="uid://cwm7v0l67u1wl" path="res://enemy.png" id="8_ioo17"]
[ext_resource type="Script" uid="uid://dewogb7ebgm6c" path="res://immediate_button.gd" id="12_k3n1d"]
[ext_resource type="Texture2D" uid="uid://haur017j6fnc" path="res://enemy_launcher_ground.tres" id="13_hiqwa"]
[ext_resource type="PackedScene" uid="uid://d3430qynob2bi" path="res://mainmenu.tscn" id="13_udxuc"]
[ext_resource type="PackedScene" uid="uid://bghxa1m6uvkcl" path="res://devnote.tscn" id="18_cbp6q"]
[ext_resource type="AudioStream" uid="uid://cfd2cg5jtpvu6" path="res://bgm0_cheesecakeshoals.ogg" id="18_ikiii"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ikiii"]
atlas = ExtResource("6_udxuc")
region = Rect2(0, 0, 33, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbp6q"]
atlas = ExtResource("6_udxuc")
region = Rect2(33, 0, 33, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_26xuy"]
atlas = ExtResource("6_udxuc")
region = Rect2(66, 0, 33, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc84e"]
atlas = ExtResource("6_udxuc")
region = Rect2(99, 0, 33, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_wukud"]
atlas = ExtResource("6_udxuc")
region = Rect2(132, 0, 33, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_il2jm"]
atlas = ExtResource("6_udxuc")
region = Rect2(165, 0, 33, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjb0r"]
atlas = ExtResource("6_udxuc")
region = Rect2(198, 0, 33, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc2jv"]
atlas = ExtResource("6_udxuc")
region = Rect2(231, 0, 33, 47)

[sub_resource type="SpriteFrames" id="SpriteFrames_bo7i5"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikiii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbp6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26xuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc84e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wukud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_il2jm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjb0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc2jv")
}],
"loop": true,
"name": &"new_animation",
"speed": 17.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ioo17"]
size = Vector2(32, 10.3333)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_2o6r5"]
points = PackedVector2Array(0, -20, 10, 20, -10, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2o6r5"]
size = Vector2(25, 8.66666)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikiii"]
bg_color = Color(0.2052, 0.214447, 0.76, 1)

[sub_resource type="Animation" id="Animation_udxuc"]
resource_name = "fadeout"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_ikiii"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cbp6q"]
_data = {
&"RESET": SubResource("Animation_ikiii"),
&"fadeout": SubResource("Animation_udxuc")
}

[node name="world" type="Node2D"]
script = ExtResource("1_tlwt5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 3
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
canvas_item_default_texture_filter = 0
size = Vector2i(384, 216)
render_target_update_mode = 4

[node name="gameworld" type="Node2D" parent="CanvasLayer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="Layer0" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld" instance=ExtResource("3_hiqwa")]
unique_name_in_owner = true
script = ExtResource("4_hiqwa")

[node name="player" type="CharacterBody2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld"]
unique_name_in_owner = true
position = Vector2(104, 125)
collision_mask = 7
script = ExtResource("2_k3n1d")
type = 1
move_speed = 200.0
fallthrough_length_frames = 7
facing = 2
arms_act_length = 0.5
arms_curve = ExtResource("3_2o6r5")
coyote_frames = 20.0
jump_height = 3000.0
jump_time_to_peak = 13.0
jump_time_to_descent = 14.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player"]
position = Vector2(3, -13.3333)
sprite_frames = SubResource("SpriteFrames_bo7i5")
animation = &"new_animation"

[node name="Icon" type="Sprite2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player"]
visible = false
position = Vector2(4.33333, -26.6667)
texture = ExtResource("4_ioo17")

[node name="arms" type="CharacterBody2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player"]
position = Vector2(3.33333, -11)
script = ExtResource("2_k3n1d")
type = 2
metadata/_custom_type_script = "uid://bicyvhsgocq7m"

[node name="Hand" type="Sprite2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player/arms"]
position = Vector2(-11.1111, -0.370371)
texture = ExtResource("5_wse8f")

[node name="Hand2" type="Sprite2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player/arms"]
position = Vector2(10.5556, -2.03704)
texture = ExtResource("5_wse8f")

[node name="Area2D" type="Area2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player/arms"]
position = Vector2(0.666659, -0.999995)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player/arms/Area2D"]
shape = SubResource("RectangleShape2D_ioo17")

[node name="arms_home" type="CharacterBody2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player"]
unique_name_in_owner = true
position = Vector2(3.33333, -9.66667)
script = ExtResource("2_k3n1d")
metadata/_custom_type_script = "uid://bicyvhsgocq7m"

[node name="arms_home2" type="CharacterBody2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player"]
unique_name_in_owner = true
position = Vector2(7, -39)
script = ExtResource("2_k3n1d")
metadata/_custom_type_script = "uid://bicyvhsgocq7m"

[node name="collision" type="CollisionShape2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player"]
position = Vector2(4, -11.3333)
shape = SubResource("ConvexPolygonShape2D_2o6r5")

[node name="Torso" type="Sprite2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player"]
visible = false
position = Vector2(2.66666, -9.33334)
texture = ExtResource("6_ic0uy")

[node name="feet" type="CharacterBody2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player"]
position = Vector2(2.33333, 5.66667)
script = ExtResource("2_k3n1d")
type = 3
metadata/_custom_type_script = "uid://bicyvhsgocq7m"

[node name="Foot" type="Sprite2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player/feet"]
visible = false
position = Vector2(-8, 0.777781)
texture = ExtResource("7_k3n1d")

[node name="Foot2" type="Sprite2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player/feet"]
visible = false
position = Vector2(7.66667, 1.11111)
texture = ExtResource("7_k3n1d")

[node name="Area2D" type="Area2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player/feet"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player/feet/Area2D"]
shape = SubResource("RectangleShape2D_2o6r5")

[node name="Camera2D" type="Camera2D" parent="CanvasLayer/SubViewportContainer/SubViewport/gameworld/player"]
position = Vector2(1, -64)
enabled = false
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="mainmenu" parent="CanvasLayer/SubViewportContainer/SubViewport" instance=ExtResource("13_udxuc")]
unique_name_in_owner = true

[node name="fantasy_ui" type="Panel" parent="CanvasLayer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(150, 150)
offset_left = 59.0
offset_top = 33.0
offset_right = 376.0
offset_bottom = 278.0
script = ExtResource("5_036b0")

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/fantasy_ui"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.403922, 0.403922, 0.403922, 0.47451)

[node name="HFlowContainer" type="HFlowContainer" parent="CanvasLayer/fantasy_ui/ColorRect3"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.055
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -0.475
offset_right = -7.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer/ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_hiqwa")
stretch_mode = 5
flip_h = true

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer/ColorRect2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ioo17")
stretch_mode = 5
flip_h = true

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer/ColorRect3"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ioo17")
stretch_mode = 5
flip_h = true

[node name="ColorRect4" type="ColorRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer/ColorRect4"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ioo17")
stretch_mode = 5
flip_h = true

[node name="ColorRect5" type="ColorRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer/ColorRect5"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ioo17")
stretch_mode = 5
flip_h = true

[node name="ColorRect6" type="ColorRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer/ColorRect6"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ioo17")
stretch_mode = 5
flip_h = true

[node name="ColorRect7" type="ColorRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer/ColorRect7"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ioo17")
stretch_mode = 5
flip_h = true

[node name="ColorRect8" type="ColorRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer/ColorRect8"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ioo17")
stretch_mode = 5
flip_h = true

[node name="ColorRect9" type="ColorRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer/ColorRect9"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ioo17")
stretch_mode = 5
flip_h = true

[node name="ColorRect10" type="ColorRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/fantasy_ui/ColorRect3/HFlowContainer/ColorRect10"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ioo17")
stretch_mode = 5
flip_h = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/fantasy_ui"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 1
color = Color(0.35, 0.360834, 1, 1)

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/fantasy_ui"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_top = -9.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1

[node name="Label" type="Label" parent="CanvasLayer/fantasy_ui"]
layout_mode = 1
offset_left = 6.0
offset_top = 1.0
offset_right = 137.0
offset_bottom = 24.0
text = "DEBUG WINDOW"

[node name="Label2" type="Label" parent="CanvasLayer/fantasy_ui"]
layout_mode = 1
offset_left = 15.0
offset_top = 36.0
offset_right = 146.0
offset_bottom = 59.0
text = "Active Objects"

[node name="Button" type="Button" parent="CanvasLayer/fantasy_ui"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -41.0
offset_right = 122.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_ikiii")
text = "Restart Level"
script = ExtResource("12_k3n1d")
metadata/_custom_type_script = "uid://dewogb7ebgm6c"

[node name="Button" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = 695.0
offset_top = 147.0
offset_right = 792.0
offset_bottom = 178.0
text = "spawn halo"
script = ExtResource("12_k3n1d")

[node name="Button1" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = 993.0
offset_top = 181.0
offset_right = 1122.0
offset_bottom = 212.0
text = "spawn enemy 2"
script = ExtResource("12_k3n1d")
metadata/_custom_type_script = "uid://dewogb7ebgm6c"

[node name="DevNoteTitleScreen" parent="CanvasLayer" instance=ExtResource("18_cbp6q")]
unique_name_in_owner = true
offset_left = 442.0
offset_top = 334.0
offset_right = 455.0
offset_bottom = 349.0
the_text = "Remember to disable the debug window and devlogs in the public release. -dav"

[node name="DevNotePanel" type="Panel" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = 920.0
offset_top = 2.0
offset_right = 1148.0
offset_bottom = 230.0

[node name="Label" type="RichTextLabel" parent="CanvasLayer/DevNotePanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 225.0
offset_bottom = 223.0
text = "would"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_ikiii")
autoplay = true
parameters/looping = true

[node name="fadeout" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="fadeout"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="fadeout"]
self_modulate = Color(0, 0, 0, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.5
offset_top = -24.5
offset_right = 178.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
text = "That's all, folks!
We ran out of time. Hope that was interesting."

[node name="AnimationPlayer" type="AnimationPlayer" parent="fadeout"]
libraries = {
&"": SubResource("AnimationLibrary_cbp6q")
}

[connection signal="gui_input" from="CanvasLayer/fantasy_ui" to="CanvasLayer/fantasy_ui" method="_on_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/fantasy_ui" to="CanvasLayer/fantasy_ui" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/fantasy_ui" to="CanvasLayer/fantasy_ui" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/fantasy_ui/ColorRect" to="CanvasLayer/fantasy_ui" method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/fantasy_ui/ColorRect" to="CanvasLayer/fantasy_ui" method="_on_color_rect_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/fantasy_ui/ColorRect2" to="CanvasLayer/fantasy_ui" method="_on_color_rect_2_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/fantasy_ui/ColorRect2" to="CanvasLayer/fantasy_ui" method="_on_color_rect_2_mouse_exited"]
